# revoLUT

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: 2bp.rs  bcs.rs  benchmarks.rs  bma.rs  bp.rs  packing.rs
charts/: charts_primitives.ipynb
examples/: blind_array_access.rs  blind_array_add.rs  blind_bloom_filter.rs  blind_counting_sort.rs  blind_matrix_access.rs  blind_matrix_add.rs  blind_permutation.rs  bloom_filter_experiment.rs
exports/: benchmark_packing_2.csv  benchmark_packing_4.csv  benchmark_packing_5.csv  benchmark_packing_6.csv  benchmark_packing_lut_4.csv  benchmark_packing_mul_and_sum_4.csv  benchmark_results.csv  packing_lwe_to_glwe.csv  packing_lwe_to_glwe_full.csv  packing_one_lwe_to_glwe.csv
src/: blind_array_access.rs  blind_array_access2d.rs  blind_heap.rs  blind_insertion.rs  blind_permutation.rs  blind_pop.rs  blind_push.rs  blind_retrieve.rs  blind_sort.rs  blind_tensor_access.rs  blind_topk.rs  context.rs  headers.rs  lib.rs  lut.rs  main.rs  matmul.rs  nlwe.rs  packed_lut.rs  params.rs  perf_test.rs  performance_test.rs  private_key.rs  public_key.rs  radix.rs  uni_test.rs
