[package]
name = "revolut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.6.1", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
] }
[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.6.1", features = [
    "boolean",
    "shortint",
    "integer",
    "x86_64-unix",
] }

[dependencies]
num-complex = "0.4.0"
arrayvec = "0.7.2"
aligned-vec = "0.5.0"
rayon = "1.6.1"
concrete-csprng = "0.4.0"
dyn-stack = "0.9.1"
itertools = "0.13.0"
concrete-fft = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
csv = "1.1.6"
serde_json = "1.0"
ndarray = { version = "0.16.1", features = ["rayon"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "bma"
harness = false

[[bench]]
name = "2bp"
harness = false

[[bench]]
name = "bp"
harness = false

[[bench]]
name = "bcs"
harness = false

[[bench]]
name = "packing"
harness = false
