[package]
name = "revolut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
dyn-stack = { version = "0.11", default-features = false }
num-complex = "0.4.6"
arrayvec = "0.7.6"
aligned-vec = "0.6.4"
rayon = "1.11.0"
concrete-csprng = "0.4.1"
concrete-fft = "0.5.1"
itertools = "0.14.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
csv = "1.3.1"
serde_json = "1.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
tfhe = { version = "1.3.3", features = ["boolean", "shortint", "integer"] }
reborrow = "0.5"



[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.5.1", features = ["html_reports"] }

#[patch.crates-io]
#dyn-stack = { version = "0.11.0" }


[[bench]]
name = "bma"
harness = false

[[bench]]
name = "2bp"
harness = false

[[bench]]
name = "bp"
harness = false

[[bench]]
name = "bcs"
harness = false
